--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.1",
@@ -67,6 +68,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "supabase": "^2.20.12",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
